# brewblox-firmware

./: .editorconfig  .gitignore  .gitmodules  azure-pipelines.yml  readme.md  wrapped_make.sh
app/brewblox-esp/main/: AppBox.cpp  AppLogger.cpp  AppLogger.hpp  AppTicks.cpp  AppTicks.h  AppTicks.hpp  BeepTask.hpp  Brewblox.cpp  Brewblox.hpp  CMakeLists.txt  CboxInjection.cpp  EspApplication.cpp  EspBox.cpp  EspBox.hpp  EspCboxApplication.cpp  ExpOwGpio.cpp  ExpOwGpio.hpp  ExpansionGpio.cpp  ExpansionGpio.hpp  HttpHandler.hpp  I2cScanningFactory.cpp  I2cScanningFactory.hpp  NoInitRamAccess.cpp  NoInitRamAccess.hpp  OkButtonMonitor.hpp  RecurringTask.hpp  SortedContainer.hpp  TimerInterrupts.cpp  brewblox_esp.cpp  brewblox_esp.hpp  gpio_handler.cpp  gpio_handler.hpp  gpio_hanlder.cpp  intellisense.hpp  lv_conf.h  main.cpp  ota.cpp  ota.hpp  sntp.hpp  task_stats.hpp
app/brewblox-simulator/: CMakeLists.txt
app/brewblox-simulator/main/: CMakeLists.txt  main.cpp
brewblox/: CMakeLists.txt  I2cScanningFactory.cpp  OneWireMultiScanningFactory.hpp  OneWireScanningFactory.hpp  brewblox.cpp  brewblox.hpp
brewblox/blox/: ActuatorAnalogConstraintsProto.cpp  ActuatorAnalogConstraintsProto.h  ActuatorAnalogMockBlock.cpp  ActuatorAnalogMockBlock.h  ActuatorDigitalConstraintsProto.cpp  ActuatorDigitalConstraintsProto.h  ActuatorLogicBlock.cpp  ActuatorLogicBlock.h  ActuatorOffsetBlock.cpp  ActuatorOffsetBlock.h  ActuatorPwmBlock.cpp  ActuatorPwmBlock.h  BalancerBlock.cpp  BalancerBlock.h  Block.h  BlockInterfaces.cpp  ConstraintsProto.cpp  ConstraintsProto.h  DS2408Block.cpp  DS2408Block.h  DS2413Block.cpp  DS2413Block.h  DigitalActuatorBlock.cpp  DigitalActuatorBlock.h  DisplaySettingsBlock.h  IoArrayHelpers.h  MockPinsBlock.cpp  MockPinsBlock.h  MotorValveBlock.cpp  MotorValveBlock.h  MutexBlock.cpp  MutexBlock.h  OneWireBusBlock.cpp  OneWireBusBlock.h  OneWireDeviceBlock.h  PidBlock.cpp  PidBlock.h  SetpointProfileBlock.cpp  SetpointProfileBlock.h  SetpointSensorPairBlock.cpp  (+9 more)
brewblox/blox/compiled_proto/: compile_proto.sh  compile_test_proto.sh
controlbox/: CMakeLists.txt
controlbox/src/cbox/: Base64.cpp  Box.cpp  Box.h  CboxPtr.cpp  CboxPtr.h  ConnectionPool.cpp  ConnectionPool.h  Connections.h  ConnectionsStringStream.h  ContainedObject.h  Crc.cpp  DataStream.cpp  DataStream.h  DataStreamConverters.cpp  DataStreamConverters.h  DataStreamEeprom.h  DeprecatedObject.h  EepromObjectStorage.cpp  FileObjectStorage.cpp  FileObjectStorage.h  GroupsObject.h  ObjectBase.cpp  ObjectBase.h  ObjectContainer.h  ObjectFactory.cpp  ObjectFactory.h  ObjectStorage.h  ScanningFactory.hpp  Tracing.cpp  Tracing.h  b64_utility.h  hex_utility.h
controlbox/test/: Box_test.cpp  Connections_test.cpp  EepromObjectStorage_test.cpp  FileObjectStorage_test.cpp  LongIntScanningFactory.hpp  ObjectContainer_test.cpp  ObjectFactory_test.cpp  Stream_test.cpp
external_libs/lvgl/: CMakeLists.txt
external_libs/lvgl_wrapper/: CMakeLists.txt
external_libs/nanopb/: CMakeLists.txt
lib/: CMakeLists.txt
lib/blocks/: CMakeLists.txt  OneWireScanningFactory.hpp
lib/blocks/blocks/: ActuatorAnalogMockBlock.cpp  ActuatorAnalogMockBlock.h  ActuatorLogicBlock.cpp  ActuatorLogicBlock.h  ActuatorOffsetBlock.cpp  ActuatorOffsetBlock.h  ActuatorPwmBlock.cpp  ActuatorPwmBlock.h  BalancerBlock.h  ConstraintsProto.h  DS2408Block.cpp  DS2408Block.h  DS2413Block.h  DigitalActuatorBlock.h  DisplaySettingsBlock.cpp  MockPinsBlock.h  MotorValveBlock.h  MutexBlock.cpp  MutexBlock.h  OneWireBusBlock.cpp  OneWireBusBlock.h  PidBlock.cpp  PidBlock.h  SetpointProfileBlock.cpp  SetpointProfileBlock.h  SetpointSensorPairBlock.cpp  SetpointSensorPairBlock.h  SysInfoBlock.cpp  TempSensorCombiBlock.h  TempSensorMockBlock.h  TempSensorOneWireBlock.cpp  TempSensorOneWireBlock.h  TicksBlock.h
lib/blocks/inc/: OneWireMultiScanningFactory.hpp  OneWireScanningFactory.hpp  brewblox.hpp
lib/blocks/src/: ActuatorAnalogMockBlock.cpp  ActuatorLogicBlock.cpp  ActuatorOffsetBlock.cpp  ActuatorPwmBlock.cpp  BalancerBlock.cpp  Block.cpp  BlockFactory.cpp  BlockInterfaces.cpp  ConstraintsProto.cpp  DS2408Block.cpp  DS2413Block.cpp  DigitalActuatorBlock.cpp  DisplaySettingsBlock.cpp  FastPwmBlock.cpp  MockPinsBlock.cpp  MotorValveBlock.cpp  MutexBlock.cpp  OneWireBusBlock.cpp  OneWireScanningFactory.cpp  OneWireScannningFactory.cpp  PidBlock.cpp  ScreenConfig.cpp  SequenceBlock.cpp  SetpointProfileBlock.cpp  SetpointSensorPairBlock.cpp  StepperBlock.cpp  SysInfoBlock.cpp  TempSensorCombiBlock.cpp  TempSensorExternalBlock.cpp  TempSensorMockBlock.cpp  TempSensorOneWireBlock.cpp  brewblox.cpp
lib/blox_hal/: CMakeLists.txt
lib/blox_hal/src/: hal_spi.cpp
lib/cbox/: CMakeLists.txt
lib/cbox/src/: Base64.cpp  Box.cpp  CboxApplication.cpp  CboxPtr.cpp  ConnectionPool.cpp  Crc.cpp  DataStream.cpp  DataStreamConverters.cpp  EepromDataStream.cpp  EepromObjectStorage.cpp  FileObjectStorage.cpp  ObjectBase.cpp  ObjectContainer.cpp  ObjectFactory.cpp  ObjectStream.cpp  PayloadConversion.cpp  Serialization.cpp  Tracing.cpp
lib/compiled_proto/proto/: Constraints.pb.h  DisplaySettings.pb.c  MotorValve.pb.c  SetpointSensorPair.pb.c  TouchSettings.pb.h  WiFiSettings.pb.c
lib/control/: CMakeLists.txt
lib/control/inc/: ADS124S08.hpp  DS248x.hpp  I2CDevice.hpp  IoArray.h  IoModule.hpp  OneWireMockDriver.h
lib/control/src/: ActuatorAnalogConstrained.cpp  Pid.cpp  (+29 more)
lib/guis/: README.md  graphics.hpp  gui.hpp  lvgl_helpers.hpp  lvgl_screen.hpp  lvgl_touchscreen.hpp  pixel_format.hpp
lib/inc/: ActuatorAnalogMock.h  ActuatorDigital.h  ActuatorDigitalBase.h  ActuatorPwm.h  DS18B20.h  DS2408.h  DS2413.h  DS248x.hpp  I2CDevice.hpp  InputDigital.h  IoArray.h  IoModule.hpp  MockIoArray.h  OneWire.h  OneWireDevice.h  OneWireLowLevelInterface.h  SX1508.hpp  SlotMemPool.hpp  staticAllocator.hpp
lib/proto/: CMakeLists.txt
lib/src/: ActuatorPwm.cpp  DS2408.cpp  DS2413.cpp  DS248x.cpp  InputDigital.cpp  MotorValve.cpp  OneWireDevice.cpp  Pid.cpp  SX1508.cpp
lib/test/: FilterChain_test.cpp  FpFilterChain_test.cpp  OneWireMock_test.cpp  makefile  staticAllocator_test.cpp
(+1222 files in other folders)
