idf_component_register(
  SRCS
    src/cbox/Box.cpp
    src/cbox/CboxPtr.cpp
    src/cbox/ConnectionPool.cpp
    src/cbox/Crc.cpp
    src/cbox/DataStream.cpp
    src/cbox/DataStreamConverters.cpp
    src/cbox/EepromObjectStorage.cpp
    src/cbox/FileObjectStorage.cpp
    src/cbox/ObjectBase.cpp
    src/cbox/ObjectContainer.cpp
    src/cbox/ObjectFactory.cpp
    src/cbox/Tracing.cpp
  INCLUDE_DIRS
    src
  REQUIRES
    main
)
