idf_component_register(
  SRCS
    src/Base64.cpp
    src/Box.cpp
    src/CboxPtr.cpp
    src/Crc.cpp
    src/EepromDataStream.cpp
    src/EepromObjectStorage.cpp
    src/FileObjectStorage.cpp
    src/ObjectBase.cpp
    src/ObjectContainer.cpp
    src/ObjectFactory.cpp
    src/Serialization.cpp
  INCLUDE_DIRS
    inc
  REQUIRES
    main
)
