idf_component_register(
  SRCS
    src/network/CboxConnection.cpp
    src/network/CboxConnectionManager.cpp
    src/network/CboxStdioConnection.cpp
    src/network/CboxTcpConnection.cpp
    src/network/ethernet.cpp
    src/network/wifi.cpp
  INCLUDE_DIRS
    src
  PRIV_REQUIRES
    nvs_flash
    wifi_provisioning
    qrcode
  REQUIRES
    main
    controlbox
    asio
    mdns
)
